# throughline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: BENCHMARKS.md  FAQ.md  INSTALLATION.md  RELEASE_NOTES_v0.1.0-beta.md  USAGE.md  architecture.md
docs/assets/: hero-readme.png.placeholder
docs/internal/: BRANDING.md  PRIVACY_AUDIT.md  QUALITY_REPORT.md
docs/landing/: README.md  index.html
docs/screenshots/: README.md
evals/: README.md  questions.jsonl  run_eval.py
examples/: common_queries.sql  demo_data.sql  example_skill.md  example_workflows.md
gui/: app.py  semantic_helper.py
gui/.streamlit/: config.toml
launchd/: com.claude-memory-backup.plist  com.claude-memory-extract.plist  com.claude-memory-ingest.plist
mcp/: README.md  requirements.txt  server.py
memory_mcp/: README.md  db.py  server.py
scripts/: backup.sh  context_preload.py  extract_entities.py  extract_memory.py  forget.py  generate_embeddings.py  generate_titles.py  graph_query.py  ingest_sessions.py  ingest_windsurf.py  install.sh  install_hooks.sh  load_demo.sh  migrate.py  reflect_memory.py  scan_prompts.py  scan_skills.py  schema_knowledge_graph.sql  search_semantic.py  test_fresh_install.sh
skill/: SKILL.md
skill/scripts/: add.py  query.py
sql/: schema.sql
sql/migrations/: README.md
systemd/: README.md  throughline-backup.service  throughline-backup.timer  throughline-extract.service  throughline-extract.timer  throughline-ingest.service  throughline-ingest.timer
tests/: conftest.py  test_extract_memory.py  test_generate_titles.py  test_import_smoke.py  test_ingest_sessions.py  test_pii.py  test_scan_prompts.py  test_scan_skills.py
tests/integration/: conftest.py  test_ingestion_e2e.py  test_memory_query.py  test_skill_scan_e2e.py
throughline/: __init__.py  __main__.py  cli.py  config.py  pii.py
